<resources>
    <string name="app_name">Kalkulator</string>
    <string name="textView1">Liczba 1</string>
    <string name="textView2">Liczba 2</string>
    <string name="addButton">+</string>
    <string name="subButton">-</string>
    <string name="mulButton">*</string>
    <string name="divButton">/</string>
    <string name="textView3">Wynik</string>
    <string name="piButton">POLICZ LICZBĘ PI</string>
    <string name="clrButton">CZYŚĆ</string>
    <string name="about">O Autorze</string>
    <string name="author">Autor: Patryk Surowiec</string>
    <string name="cast">Cast</string>
</resources>
